--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                     <p class="section-text">Le ofrecemos la posibilidad de pagar nuestros honorarios de manera
                         financiada, es decir, podrá hacerlo mes a mes y sin intereses.</p>
                 </div>
-                <div>
+                <div class="section-child">
                     <img class="img-atencion" src="./images/inicio/atencion.png" alt="">
                     <p class="section-titulo">Atención Personalizada</p>
                     <p class="section-text">Estudiaremos con detenimiento las particularidades de su caso para darle la
                         solución legal que mejor se adapte a sus necesidades.</p>
                 </div>
-                <div>
+                <div class="section-child">
                     <img class="img-primera" src="./images/inicio/primera.png" alt="">
                     <p class="section-titulo"> Primera consulta</p>
                     <p class="section-text">Si contrata nuestros servicios para llevar su caso, le descontaremos lo que
                         pagó por la consulta inicial.</p>
                 </div>
-                <div>
+                <div class="section-child">
                     <img class="img-cobramos" src="./images/inicio/cobramos.png" alt="">
                     <p class="section-titulo-cobramos">Cobramos si usted cobra</p>
                     <p class="section-text">Si su caso es viable, podremos prestar nuestros servicios y sólo cobrar
@@ -48,13 +48,13 @@
                 </div>
             </div>
             <div class="section-2 center">
-                <div>
+                <div class="section-child">
                     <img class="img-precio" src="./images/inicio/precio.png" alt="">
                     <p class="section-titulo">Precio cerrado sin sorpresas</p>
                     <p class="section-text">Desde el primer momento sabrás cuánto cuestan nuestros servicios. Tenemos
                         honorarios fijos y asequibles para nuestros clientes.</p>
                 </div>
-                <div>
+                <div class="section-child">
                     <img class="img-contacto" src="./images/inicio/contacto.png" alt="">
                     <p class="section-titulo">Contacto permanente con nosotros</p>
                     <p class="section-text">Atendemos a los clientes por teléfono, Skype, por correo electrónico, o
