--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Roxana</title>
-    <style>
-         
- 
-    </style>
-
+    <title>R&A</title>
 </head>
 
 <body>
