feat:add index.html in header

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
             &#8801
         </label>
         <nav class="menu">
-            <a href="#">Inicio</a>
+            <a href="./index.html">Inicio</a>
             <a href="./servicios.html">Servicio</a>
             <a href="#">Tr&aacute;mites Extranjer&iacute;a
                 <!-- Nacionalidad -->
