feat: add pages with information

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@
             <h2 class="center">Agenda una Cita</h2>
             <div class="div-meet-form">
                 <div>
-                    <form action="https://formspree.io/f/mpzgzapn" method="POST">
+                    <form action="https://formspree.io/f/xpzgdbrj" method="POST">
                         <div class="section-form-1">
                             <div class="section-name">
                                 <div>
