feat: add pages nacionalidad.html and residenciaArraigo.html

--- a/pages/residenciaArraigo.html
+++ b/pages/residenciaArraigo.html
@@ -46,16 +46,19 @@
             </li>
         </ul>
         </p>
-        <p>
+        <br>
+        <p class="bold">
             TIPOS DE ARRAIGO
         </p>
         <p>
             Los supuestos de arraigo por circunstancias excepcionales son:
         </p>
         <ol>
-            <li>
-                RESIDENCIA POR ARRAIGO SOCIAL
-                <img src="../images/extranjeria/arraigosocial.jpg" alt="">
+            <li class="li-number">
+                <span class="bold">RESIDENCIA POR ARRAIGO SOCIAL</span>
+                <div class="center">
+                    <img class="image-pages" src="../images/extranjeria/arraigosocial.jpg" alt="">
+                </div>
                 <p>
                     Es el tipo de arraigo más común. Puede ser solicitado por aquellos inmigrantes que han permanecido
                     más
@@ -91,9 +94,11 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                RESIDENCIA POR ARRAIGO LABORAL
-                <img src="../images/extranjeria/arraigolaboral.jpg" alt="">
+            <li class="li-number">
+                <span class="bold">RESIDENCIA POR ARRAIGO LABORAL</span>
+                <div class="center">
+                    <img class="image-pages" src="../images/extranjeria/arraigolaboral.jpg" alt="">
+                </div>
                 <p>
                     Esta opción es aplicable a aquellos extranjeros no comunitarios que han permanecido en España al
                     menos
@@ -138,9 +143,11 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                RESIDENCIA POR ARRAIGO FAMILIAR
-                <img src="../images/extranjeria/arraigofamiliar.jpg" alt="">
+            <li class="li-number">
+                <span class="bold">RESIDENCIA POR ARRAIGO FAMILIAR</span>|  
+                <div class="center">
+                    <img class="image-pages" src="../images/extranjeria/arraigofamiliar.jpg" alt="">
+                </div>
                 <p>
                     Es una autorización de carácter temporal y por circunstancias excepcionales. La regulación de la
                     residencia por arraigo familiar se encuentra en la Ley de Extranjería y el Reglamento de
@@ -203,9 +210,11 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                RESIDENCIA POR ARRAIGO PARA LA FORMACI&Oacute;N
-                <img src="../images/extranjeria/arraigoparaformacion.jpg" alt="">
+            <li class="li-number">
+                <span class="bold">RESIDENCIA POR ARRAIGO PARA LA FORMACI&Oacute;N</span>|  
+                <div class="center">
+                    <img class="image-pages" src="../images/extranjeria/arraigoparaformacion.jpg" alt="">
+                </div>
                 <p>
                     Es una figura creada por el Real Decreto 629/2022 que permite conseguir un permiso de residencia
                     legal
