feat: modify pages with information

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>R&A</title>
+    <title>Roxana Avila Montes Abogados</title>
 </head>
 <body>
     <header id="header">
@@ -28,7 +28,7 @@
             </div>
             <div class="section-child">
                 <img class="img-primera" src="/images/inicio/primera.png" alt="">
-                <p class="section-titulo"> Primera consulta</p>
+                <p class="section-titulo">Primera consulta</p>
                 <p class="section-text">Si contrata nuestros servicios para llevar su caso, le descontaremos lo que
                     pagó por la consulta inicial.</p>
             </div>
