--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>R&A</title>
 </head>
+
 <body>
     <header id="header">
     </header>
+    <section style="width:100%;" class="center">
+        <div class="section-servicio-texto justify">
+            <p>Somos un despacho de abogados especialistas en Extranjería, Familia, Laboral, Civil. Nos encontramos
+                ubicados en el centro de Tarragona.
+                Estaremos encantados de conocerte y solucionar tus problemas legales, de forma personalizado de acuerdo
+                a la situación de cada cliente.
+                ¡No pierdas el camino, somos la solución!
+            </p>
+        </div>
+    </section>
     <section>
         <div class="titulo-familia center">
             <h2>FAMILIA</h2>
@@ -107,15 +119,6 @@
                 <img class="img-civil-reclamacion" src="/images/servicios/civil/tutela.jpg" alt="">
                 <p class="section-civil-text">Tutela</P>
             </div>
-        </div>
-    </section>
-    <section>
-        <div class="section-servicio-texto center">
-            <p>Somos un despacho de abogados especialistas en Extranjería, Familia, Laboral, Civil. Nos encontramos
-                ubicados en el centro de Tarragona.</p>
-            <p>Estaremos encantados de conocerte y solucionar tus problemas legales, de forma personalizado de acuerdo a
-                la situación de cada cliente.</p>
-            <p>¡No pierdas el camino, somos la solución!</p>
         </div>
     </section>
     <footer id="footer">
