feat: add search information

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>Roxana Avila Montes Abogados</title>
+    <script type="application/ld+json">
+    {
+        "@context": "https://avilamontesabogados.com",
+        "@type": "WebSite",
+        "name": "Roxana Avila Montes Abogados",
+        "alternateName": "Roxana Avila Montes",
+        "url": "https://avilamontesabogados.com"
+    }
+    </script>
 </head>
+
 <body>
     <header id="header">
     </header>
@@ -58,4 +69,5 @@
     </footer>
     <script src="/js/js.js"></script>
 </body>
+
 </html>
